# just-practice

./: .release-please-manifest.json  app.py  release-please-config.json
.github/workflow/: ci-config.yml
.github/workflows/: main.yml  release.yml
src/app/: CHANGELOG.md  README.md  __init__.py  app.py  pyproject.toml
